Joe | Added new_game view

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,7 @@
 		<title>WEBDAWGS Battleships!</title>
 	</head>
 	<body>
-		<a href="http://localhost:9292/">New Game</a>
+		<a href="new_game">New Game</a>
 
 
 	</body>
