Jenny, Zoe & Peter | Added tests...........

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<h1>WEBDAWGS Battleships!</h1>
-		<a href="new_game">New Game</a>
+		<a href="registration">New Game</a>
 
 
 	</body>
