--- a/views/registration_success.erb
+++ b/views/registration_success.erb
@@ -6,6 +6,6 @@
 	<body>
 		<h1>Registration Success!</h1>
 
-		<p> Welcome to WEBDAWGS Battleships, <%= @player1name %> and <%= @player2name %>! </p>
+		<p>Welcome to Webdawgs' Battleships, <%= @player1name %> and <%= @player2name %>! </p>
 	</body>
 </html>
