--- a/views/registration.erb
+++ b/views/registration.erb
@@ -10,9 +10,9 @@
 		<form name="input" action="/registration_success" method="post">
 
 		    Player 1:
-		      <input type="text" name="player1name" placeholder="Enter name" required pattern="[a-zA-Z]+"> <br>
+		      <input type="text" name="player1" placeholder="Enter name" required pattern="[a-zA-Z]+"> <br>
 		    Player 2:
-		      <input type="text" name="player2name" placeholder="Enter name" required pattern="[a-zA-Z]+"> <br>
+		      <input type="text" name="player2" placeholder="Enter name" required pattern="[a-zA-Z]+"> <br>
 
 		  	<input type="submit" value="Play!">
 		</form>
