Jamie | Linking Ruby with HTML

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,9 @@
 <html>
 	<head>
-		<title>WEBDAWGS Battleships!</title>
+		<title>Battleships - from WEBDAWGS</title>
 	</head>
 	<body>
+		<!-- <img src='http://localhost:9292/public/images/ame-logo.png'> -->
 		<a href="new_game">New Game</a>
 
 
