--- a/views/new_game.erb
+++ b/views/new_game.erb
@@ -1,5 +1,23 @@
 <html>
+	<head>
+		<title>Enter your name</title>
+	</head>
+	<body>
+		<p>What's your name?</p>
 
-What's your name?
+		<form name="input" action="/registration_success" method="post">
+			Player 1: <input type="text" name="name_1" placeholder="Enter name here" required pattern="[a-zA-Z]+">
+	
+			Player 2: <input type="text" name="name_2" placeholder="Enter name here" required pattern="[a-zA-Z]+">
 
+			<input type="submit" value="Submit">
+		</form>
+
+ 	
+
+ 
+
+
+			
+	</body>
 </html>
