--- a/views/place_ships.erb
+++ b/views/place_ships.erb
@@ -1,12 +1,3 @@
-<html>
-	<head>
-		<title>Place Ships!</title>
-	</head>
+<h1>Place Ships!</h1>
 
-	<body>
-		<h1>Place Ships!</h1>
-
-<p> Welcome to WEBDAWGS Battleships, <%= @player1.name %> and <%= @player2.name %>! </p>
-
-	</body>
-</html>
+<p> Welcome to WEBDAWGS Battleships!</p>
