--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,18 @@
 <head>
 	<title>Webdawgs' Battleships!</title>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/grid.css">
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css">
+
+	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="//code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
+	<script>
+	  $(function() {
+	    $( ".draggable" ).draggable({
+	    		// grid: [ 2, 32 ],
+	    		containment: ".battleship_grid"
+	    	});
+	  });
+	  </script>
 </head>
 <body>
 
