Jamie & Joe | sessions linked up

--- a/views/new_game.erb
+++ b/views/new_game.erb
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Enter your name</title>
@@ -6,9 +7,9 @@
 		<p>What's your name?</p>
 
 		<form name="input" action="/registration_success" method="post">
-			Player 1: <input type="text" name="name_1" placeholder="Enter name here" required pattern="[a-zA-Z]+">
+			<P>Player: <input type="text" name="name_1" placeholder="Enter name here" required pattern="[a-zA-Z]+"></p>
 	
-			Player 2: <input type="text" name="name_2" placeholder="Enter name here" required pattern="[a-zA-Z]+">
+			<!-- <p>Player 2: <input type="text" name="name_2" placeholder="Enter name here" required pattern="[a-zA-Z]+"></p> -->
 
 			<input type="submit" value="Submit">
 		</form>
