Zoe & Jenny | Sorted out user journey and where we are actually going with links and stuff. Got Waiting room to refresh until 2 players detected. Made sure Public directory worked in shotgun and rackup

--- a/views/place_ships.erb
+++ b/views/place_ships.erb
@@ -1,3 +1,7 @@
 <h1>Place Ships!</h1>
 
-<p> Welcome to WEBDAWGS Battleships!</p>
+<%= erb :grid %>
+
+<% session[:player].ships.each do |ship| %>
+<ship class="<%= ship.class %> ship"><%= ship.class %> <%= ship.remaining_hits %></ship>
+<% end %>
