--- a/views/registration.erb
+++ b/views/registration.erb
@@ -1,6 +1,6 @@
 <h1>Player, please enter your name.</h1>
 
-<form name="input" action="/place_ships" method="post">
+<form name="input" action="/waiting_room" method="post">
 
 	<input type="text" name="name" placeholder="Enter name" required pattern="[a-zA-Z]+"> <br>
 
