--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Webdawgs' Battleships!</title>
+	<title>WEBDAWGS Battleships!</title>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/grid.css">
 </head>
 <body>
+	<h1>WEBDAWGS</h1>
 
 	<img src="http://web-vassets.ea.com/Assets/Resources/Image/FullImageLogo/battleship-movie-logo.png?cb=1402546205">
+
+<br>
 
 	<%= yield %>
 
 </body>
+<footer>
+<a href="http://www.makersacademy.com/"><img src="http://www.makersacademy.com/images/logo.png"></a>
+<div>
+	The Webdawgs team built this Battleships game for your enjoyment at 
+	<a href="http://www.makersacademy.com">Makers Academy, a highly selection 12 week course in London</a>.
+	</div>
+	<div>
+		This page uses Ruby, Sinatra, Javascript, jQuery, HTML, CSS, and beautiful, glorious teamwork.
+	</div>
+</footer>
 </html>
