--- a/views/registration.erb
+++ b/views/registration.erb
@@ -1,4 +1,4 @@
-<h1>Player, please enter your name.</h1>
+<h2>Please enter your name.</h2>
 
 <form name="input" action="/waiting_room" method="post">
 
