--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,20 @@
-<h1>WEBDAWGS Battleships!</h1>
-<a href="registration">New Game</a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<a href="registration"><img src="https://blenderbits.files.wordpress.com/2013/03/menu-new-game.png"></a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
