--- a/views/place_ships_grid.erb
+++ b/views/place_ships_grid.erb
@@ -1,4 +1,4 @@
-<form name="ships_grid" action="/game" method="post">
+<form name="ships_grid" action="/place_ships/<%= session[:player].ships[1].class %>" method="post">
 
 <table class="battleship_grid">
 	<!-- Letters row -->
@@ -22,10 +22,9 @@
 			letters.each do |letter|
 				coordinate = letter + (current_number + 1).to_s
 				cell = @board.grid[coordinate]
-				display = @board.print_grid_symbol(cell.content)
 
 	%>
-		<td id="<%= coordinate %>"><%= display %></td>
+		<td><input type="checkbox" name="<%= coordinate %>"></td>
 	<%
 			end
 	%>
@@ -36,6 +35,6 @@
 	%>
 </table>
 
-<input type="submit" value="Place">
+<input type="submit" value="Deploy <%= params[:shipname] %>">
 
 </form>
