Jenny & Zoe | Can display personal grid and opponent grid

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
 <body>
 	<h1>WEBDAWGS</h1>
 
-	<img src="http://web-vassets.ea.com/Assets/Resources/Image/FullImageLogo/battleship-movie-logo.png?cb=1402546205">
+	<img src="/images/battleshiplogo.png">
 
 <br>
 
@@ -15,7 +15,7 @@
 
 </body>
 <footer>
-<a href="http://www.makersacademy.com/"><img src="http://www.makersacademy.com/images/logo.png"></a>
+<a href="http://www.makersacademy.com/"><img src="/images/makers-logo.png"></a>
 <div>
 	The Webdawgs team built this Battleships game for your enjoyment at 
 	<a href="http://www.makersacademy.com">Makers Academy, a highly selection 12 week course in London</a>.
