--- a/views/waiting_room.erb
+++ b/views/waiting_room.erb
@@ -1,4 +1,9 @@
-<META http-equiv="refresh" content="1">
+<!-- <META http-equiv="refresh" content="1"> -->
 
 	<h2>Waiting for another player...</h2>
 
+<script type="text/javascript">
+	setInterval(function(){
+		location.reload();
+	},3000);
+</script>
