--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
 <br>
 <br>
 <br>
-<a href="registration"><img src="https://blenderbits.files.wordpress.com/2013/03/menu-new-game.png"></a>
+<a href="registration"><img src="/images/menu-new-game.png"></a>
 <br>
 <br>
 <br>
