Grid validation. Completely changing how to use them bloody sessions. Major thanks to makers grads.

--- a/views/game.erb
+++ b/views/game.erb
@@ -1,4 +1,7 @@
 <h2>Let's play!</h1>
 
-<%= erb :grid %>
+<h3>Hit at opposition:</h3>
 <%= erb :opponent_grid %>
+
+<h3>Your ships:</h3>
+<%= erb :grid %>
