--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,7 @@
 <head>
 	<title>WEBDAWGS Battleships!</title>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/grid.css">
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </head>
 <body>
 	<h1>WEBDAWGS</h1>
@@ -17,11 +18,13 @@
 <footer>
 <a href="http://www.makersacademy.com/"><img src="/images/makers-logo.png"></a>
 <div>
-	The Webdawgs team built this Battleships game for your enjoyment at 
+	The Webdawgs team built this Battleships game for your enjoyment at
 	<a href="http://www.makersacademy.com">Makers Academy, a highly selection 12 week course in London</a>.
 	</div>
 	<div>
 		This page uses Ruby, Sinatra, Javascript, jQuery, HTML, CSS, and beautiful, glorious teamwork.
 	</div>
 </footer>
+
+
 </html>
