--- a/views/waiting_room.erb
+++ b/views/waiting_room.erb
@@ -3,7 +3,7 @@
 	<h2>Waiting for another player...</h2>
 
 <script type="text/javascript">
-	setInterval(function(){
-		location.reload();
-	},3000);
+	// setInterval(function(){
+	// 	location.reload();
+	// },3000);
 </script>
