--- a/views/opponent_grid.erb
+++ b/views/opponent_grid.erb
@@ -26,6 +26,7 @@
 
 	%>
 		<td id="<%= coordinate %>"><%= display %></td>
+		<!-- <input type="radio" name="sex" value="male"> -->
 	<%
 			end
 	%>
