--- a/views/waiting_room.erb
+++ b/views/waiting_room.erb
@@ -1,9 +1,7 @@
-<!-- <META http-equiv="refresh" content="1"> -->
-
-	<h2>Waiting for another player...</h2>
+<h2>Waiting for another player...</h2>
 
 <script type="text/javascript">
-	// setInterval(function(){
-	// 	location.reload();
-	// },3000);
+	setInterval(function(){
+		location.reload();
+	},3000);
 </script>
