--- a/public/stylesheets/grid.css
+++ b/public/stylesheets/grid.css
@@ -28,6 +28,15 @@ table.battleship_grid td:hover {
 	background: #F70D1A;
 }
 
+table.battleship_grid td input[type="checkbox"] {
+	visibility: hidden;
+	/*display: none;*/
+}
+
+table.battleship_grid td.active {
+	background: #6CC417;
+}
+
 footer {
 	font-size: 12px;
 	padding: 100px 0 0 0;
@@ -49,10 +58,10 @@ footer {
 }
 .Destroyer {
 	width: 126px;
-} 
+}
 .Battleship {
 	width: 158px;
-} 
+}
 .Carrier {
 	width: 190px;
 } */
