--- a/views/opponent_grid.erb
+++ b/views/opponent_grid.erb
@@ -25,7 +25,6 @@
 				display = @opponentsboard.print_away_grid_symbol(cell.content)
 	%>
 		<td id="<%= coordinate %>">
-			<%= display %>
 			<% if cell.shot_at? %>
 				<%= display %>
 			<% else %>
@@ -42,6 +41,6 @@
 	%>
 </table>
 
-<input type="submit" value="Place">
+<input type="submit" value="Fire!">
 
 </form>
