--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,11 +6,12 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </head>
 <body>
+
+<header>
 	<h1>WEBDAWGS</h1>
 
 	<img src="/images/battleshiplogo.png">
-
-<br>
+</header>
 
 	<%= yield %>
 
