--- a/views/registration.erb
+++ b/views/registration.erb
@@ -1,6 +1,4 @@
-<h2>Please enter your name.</h2>
-
-<form name="input" action="/waiting_room" method="post">
+<form name="input_name" action="/waiting_room" method="post">
 
 	<input type="text" name="name" placeholder="Enter name" required pattern="[a-zA-Z]+"> <br>
 
